# LaunchMate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
resources/: resources.rc
src/: App.cpp  App.h  CatalogPaths.h  ConfigStore.cpp  ConfigStore.h  JsonLite.cpp  JsonLite.h  MainWindow.cpp  MainWindow.h  Models.h  MonitorPowerController.cpp  MonitorPowerController.h  ProcessMonitor.cpp  ProcessMonitor.h  StartupRegistration.cpp  StartupRegistration.h  TrayIcon.cpp  TrayIcon.h  UpdateChecker.cpp  UpdateChecker.h  Utils.h  main.cpp  resource.h
